Fix uneven padding of `major-event-photo`

--- a/css/events.css
+++ b/css/events.css
@@ -84,13 +84,17 @@
   width: 65%;
   height: 100%;
 
-  background: url("../img/open-day/team.png");
+  background: url("../img/open-day/team.webp");
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
 }
 
 @media only screen and (max-width: 800px) {
+  #title h1 {
+    font-size: 60px;
+  }
+
   #major-event-container {
     flex-direction: column;
     align-items: center;
@@ -115,8 +119,8 @@
   #major-event-photo {
     width: calc(100% - 10px);
     height: auto;
-    margin: 30px 0 10px 0;
-    aspect-ratio: 1.33;
+    margin: 30px 0 5px 0;
+    aspect-ratio: 1.3;
   }
 }
 
